--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "acorn": "^5.7.4",
-    "axios": "^0.19.2",
     "cookie-parser": "^1.4.4",
     "debug": "^2.6.9",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "kind-of": "^6.0.3",
     "morgan": "^1.10.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "@bandwidth/mfa": "file:./twofactor"
   }
 }
