--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node bin/www"
   },
   "dependencies": {
+    "@bandwidth/mfa": "^1.0.0",
     "acorn": "^5.7.4",
     "cookie-parser": "^1.4.4",
     "debug": "^2.6.9",
@@ -13,7 +14,6 @@
     "http-errors": "^1.7.3",
     "kind-of": "^6.0.3",
     "morgan": "^1.10.0",
-    "pug": "^2.0.4",
-    "@bandwidth/mfa": "file:./twofactor"
+    "pug": "^2.0.4"
   }
 }
