Use the SDK rather than endpoint of the service (#2)
* Removing Axios support in favor of using SDK

* Updating the config required and readme to match SDK usage

* Pull the npm mfa library

* Resolving merge issue with rename of phoneNum to phoneNumber

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node bin/www"
   },
   "dependencies": {
+    "@bandwidth/mfa": "^1.0.0",
     "acorn": "^5.7.4",
-    "axios": "^0.19.2",
     "cookie-parser": "^1.4.4",
     "debug": "^2.6.9",
     "express": "^4.17.1",
